--- a/.github/workflows/javadoc.yaml
+++ b/.github/workflows/javadoc.yaml
@@ -1,11 +1,11 @@
 name: PR validation
 
 on:
-  pull_request:
+  push:
     branches:
-      - dev/*
-      - fix/*
-      - development
+#      - main
+#      - development
+      - dev/docs_generation
 
 jobs:
   build:
@@ -25,10 +25,10 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Unit tests
+      - name: Generate javadoc
         run:
-          mvn verify --file pom.xml
+          mvn javadoc:javadoc --file pom.xml
 
-      - name: Build
-        run:
-          mvn -B package --file pom.xml
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Generates javadoc
