--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,6 +2,7 @@ name: Push validation
 
 on:
   push:
+  pull_request:
     branches:
       - dev/*
       - fix/*
@@ -25,10 +26,10 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
+      - name: Build
+          run:
+            mvn compile --file pom.xml
+
       - name: Unit tests
         run:
-          mvn verify --file pom.xml
-
-      - name: Build
-        run:
-          mvn -B package --file pom.xml
+          mvn test --file pom.xml
