Updates target branches in javadoc.yaml

--- a/.github/workflows/javadoc.yaml
+++ b/.github/workflows/javadoc.yaml
@@ -3,9 +3,8 @@ name: Generate javadoc
 on:
   push:
     branches:
-#      - main
-#      - development
-      - dev/docs_generation
+      - main
+      - development
 
 jobs:
   build:
