--- a/.github/workflows/javadoc.yaml
+++ b/.github/workflows/javadoc.yaml
@@ -7,7 +7,7 @@ on:
       - development
 
 jobs:
-  build:
+  javadoc:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,13 +16,6 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 14
-
-      - name: Cache the Maven packages to speed up build
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
 
       - name: Generate javadoc
         continue-on-error: true
