--- a/.github/workflows/CImaven.yaml
+++ b/.github/workflows/CImaven.yaml
@@ -3,6 +3,7 @@
 
 name: Java CI with Maven
 
+
 on:
   push:
     branches: [ integration_test ]
@@ -22,4 +23,5 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        #run: mvn -B package --file pom.xml
+        run: mvn --batch-mode --update-snapshots verify
