--- a/.github/workflows/CImaven.yaml
+++ b/.github/workflows/CImaven.yaml
@@ -16,12 +16,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
+      - name: 1 - Checkout to branch
+        uses: actions/checkout@v2
+      - name: 2 - Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Build with Maven
-        #run: mvn -B package --file pom.xml
-        run: mvn --batch-mode --update-snapshots verify
+
+      - name: 3 - Build with Maven
+        run: mvn -B package --file pom.xml
+
+      -name: 4 - Results
+        run: ls -a
+
+      -name: 5 - Target folder content
+        run: ls -a
+        #test if version is snapshots
+        #build
+        #publish the things
+        #run: mvn --batch-mode --update-snapshots verify
