--- a/.github/workflows/CImaven.yaml
+++ b/.github/workflows/CImaven.yaml
@@ -15,22 +15,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 1 - Checkout to branch
+      - name: Step 0) being polite
+        uses: echo bonjour !
+
+      - name: Step 1) Checkout to branch
         uses: actions/checkout@v2
-      - name: 2 - Set up JDK 11
+      - name: Step 2) Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
 
-      - name: 3 - Build with Maven
+      - name: Step 3) Build with Maven
         run: mvn -B package --file pom.xml
 
-      -name: 4 - Results
+      -name: Step 4) Results
         run: ls -a
 
-      -name: 5 - Target folder content
-        run: ls -a
+      -name: Step 5) Target folder content
+        run: cd target && ls -a
 
         #quite franckly i'm lost
         #test if version is snapshots
