--- a/.github/workflows/CImaven.yaml
+++ b/.github/workflows/CImaven.yaml
@@ -1,42 +1,21 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Java CI with Maven
 
 on:
   push:
     branches: [ integration_test ]
-  pull_request:
-    branches: [ integration_test ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-      - name: Step 0) being polite
-        uses: echo bonjour !
-
-      - name: Step 1) Checkout to branch
-        uses: actions/checkout@v2
-      - name: Step 2) Set up JDK 11
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
-
-      - name: Step 3) Build with Maven
-        run: mvn -B package --file pom.xml
-
-      -name: Step 4) Results
-        run: ls -a
-
-      -name: Step 5) Target folder content
-        run: cd target && ls -a
-
-        #quite franckly i'm lost
-        #test if version is snapshots
-        #build
-        #publish the things
-        #run: mvn --batch-mode --update-snapshots verify
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots verify
