--- a/.github/workflows/CImaven.yaml
+++ b/.github/workflows/CImaven.yaml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Being polite
+        uses: echo hello uwu
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
