--- a/travis.yml
+++ b/travis.yml
@@ -1,4 +1,3 @@
-before_install:
-  - pip install --user codecov
+language: java
 after_success:
-  - codecov --file coverage/lcov.info --disable search
+  - bash <(curl -s https://codecov.io/bash)
