--- a/.github/workflows/CImaven.yaml
+++ b/.github/workflows/CImaven.yaml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: be polite
+        run: echo bonjour
       - uses: actions/checkout@v2
-      - name: Being polite
-        uses: echo hello uwu
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
