--- a/.github/workflows/CImaven.yaml
+++ b/.github/workflows/CImaven.yaml
@@ -11,13 +11,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: be polite
-        run: echo bonjour
-      - uses: actions/checkout@v2
+      - name: Checkout branch
+        uses: actions/checkout@v2
+
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
+
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
