--- a/.github/workflows/CImaven.yaml
+++ b/.github/workflows/CImaven.yaml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
+
+      - name: Print Target
+        run: cd target && ls -a
